--- a/index.html
+++ b/index.html
@@ -165,28 +165,28 @@
                  <div class="loisirs-items">
                     <!-- Loisir 1 -->
                      <div class="loisir-item">
-                        <img src="assets/images/hobbie1.png" alt="hobbie 1">
+                        <img src="/assets/images/hobbie1.png" alt="hobbie 1">
                         <h3>Muay Thaï</h3>
                         <p>Discipline de combat qui développe force, discipline et concentration.</p>
                      </div>
 
                     <!-- Loisir 2 -->
                     <div class="loisir-item">
-                        <img src="assets/images/hobbie2.png" alt="hobbie 2">
+                        <img src="/assets/images/hobbie2.png" alt="hobbie 2">
                         <h3>Voyager</h3>
                         <p>Explorer de nouveaux horizons et découvrir différentes cultures.</p>
                     </div>
 
                     <!-- Loisir 3 -->
                     <div class="loisir-item">
-                        <img src="assets/images/hobbie3.png" alt="hobbie 3">
+                        <img src="/assets/images/hobbie3.png" alt="hobbie 3">
                         <h3>Coder</h3>
                         <p>Créer des applications et résoudre des problèmes avec créativité et logique.</p>
                     </div>
 
                     <!-- Loisir 4 -->
                     <div class="loisir-item">
-                        <img src="assets/images/hobbie4.png" alt="hobbie 4">
+                        <img src="/assets/images/hobbie4.png" alt="hobbie 4">
                         <h3>Cuisiner</h3>
                         <p>Expérimenter de nouvelles recettes du monde</p>
                     </div>
@@ -196,7 +196,7 @@
         </div>
         
         <aside class="aside">
-            <img src="assets/images/photo2.png" alt="Photo CV">
+            <img src="/assets/images/photo2.png" alt="Photo CV">
             <p class="aside-informations">19 Ans<br>Sans Permis<br>Ormoy(91), France<br><a href="tel:+33780710943" title="lien telephone">07 80 71 09 43</a></p>
             <a href="mailto:sefora.sylla@etu.unilim.fr" title="Contact" class="aside-contact">Contactez-moi</a>
             <h3 class="aside-title">Mes réseaux</h3>
@@ -211,3 +211,4 @@
 </body>
 
 </html>
+
